--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ dj-database-url==0.5.0
 Django==1.11
 djangorestframework==3.6.2
 gunicorn==19.9.0
+psycopg2==2.7.5
+python-dotenv==0.9.1
 pytz==2018.5
-whitenoise==3.3.1
-psycopg2==2.7.2
+whitenoise==4.1
